<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="277dp"
        android:layout_height="495dp"
        android:layout_margin="@dimen/basic_margin"
        android:background="@color/WhiteColor"
        android:padding="@dimen/basic_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611">


        <TextView
            style="@style/headWords"
            android:layout_marginTop="56dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_login_forget_pass_activity"
            style="@style/Text_login_activity"
            android:layout_marginTop="105dp"
            android:layout_marginBottom="357dp"
            android:text="@string/e_mail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ET_email_register_activity"
            style="@style/ET_login_activity"
            android:layout_marginTop="3dp"
            android:drawableStart="@drawable/ic_person_"
            android:drawablePadding="@dimen/padding_icon_ET"
            android:hint="@string/login_example2"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/text_login_forget_pass_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_login_forget_pass_activity" />

        <TextView
            android:id="@+id/text_password_activity_register"
            style="@style/Text_login_activity"
            android:layout_marginTop="180dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ET_password_register_activity"
            style="@style/ET_login_activity"
            android:layout_marginTop="2dp"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/padding_icon_ET"
            android:hint="@string/password_example2"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_password_activity_register" />


        <Button
            android:id="@+id/BTN_next_email_pass_register"
            style="@style/ButtonStyle"
            android:layout_marginTop="285dp"
            android:layout_marginBottom="152dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_d"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_regTghr_activity_register"
            style="@style/Text_login_activity"
            android:layout_x="94dp"
            android:layout_y="364dp"
            android:text="@string/regTghr"
            android:textSize="@dimen/small_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ET_password_register_activity"
            app:layout_constraintVertical_bias="0.497" />

        <ImageView
            android:id="@+id/Sign_Google_register_activity"
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.233"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_regTghr_activity_register"
            app:layout_constraintVertical_bias="0.294" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/Sign_facebook_register_activity"
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toEndOf="@+id/Sign_Google_register_activity"
            app:layout_constraintTop_toBottomOf="@+id/text_regTghr_activity_register"
            app:layout_constraintVertical_bias="0.333" />


        <TextView
            android:id="@+id/text_HaveAcc_activity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/futura_light"
            android:text="@string/have_an_account"
            android:textColor="@color/BlackColor"
            android:textSize="@dimen/small_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>