<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ChangePasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="277dp"
        android:layout_height="495dp"
        android:layout_margin="@dimen/basic_margin"
        android:background="@color/WhiteColor"
        android:padding="@dimen/basic_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611">


        <TextView
            style="@style/headWords"
            android:layout_marginTop="60dp"
            android:text="@string/Change_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_oldPass_change_password_activity"
            style="@style/Text_ChangePass_Dell_activity"
            android:layout_marginTop="140dp"
            android:text="@string/text_old_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ET_oldPass_change_password_activity"
            style="@style/ET_login_activity"
            android:layout_marginTop="3dp"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/padding_icon_ET"
            android:hint="@string/password_example2"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:labelFor="@+id/text_oldPass_change_password_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_oldPass_change_password_activity" />


        <TextView
            android:id="@+id/text_newPass_change_password_activity"
            style="@style/Text_ChangePass_Dell_activity"
            android:layout_marginTop="220dp"
            android:text="@string/text_new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/ET_newPass_change_password_activity"
            style="@style/ET_login_activity"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/padding_icon_ET"
            android:hint="@string/password_example"
            android:inputType="textPassword"
            android:importantForAutofill="yes"
            android:labelFor="@+id/text_newPass_change_password_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_newPass_change_password_activity"
            android:autofillHints="@string/password" />

        <Button
            android:id="@+id/BTN_change_password_activity"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="112dp"
            android:text="@string/Change_pass"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>